@@ -8,6 +8,7 @@
  - Add doc for
    Test::Shared::Fixture::Wikibase::Datatype::Snak::Wikidata::Of::Poem.
  - Improve example comments.
+ - Update language codes.
 
 0.26 2023-04-21T20:18:03+02:00
  - Add check_datetime() utility.
